--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,7 +1,11 @@
 @import "./partials/variables" ;
-
+@import "./partials/mixin";
+@import"./partials/maps";
 @import "./partials/reset" ;
-
-@import "./partials/body" ;
-@import"./partials/main" ;
+@import"./layout/index";
+@import"./layout/niñas";
+@import"./layout/niños";
+@import"./layout/nosotros";
+@import"./layout/contacto";
+@import"./layout/footer";
 @import"./partials/mediaform";
