--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,3 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Ubuntu:wght@300;500;700&display=swap');
 $fontComfortaa : 'Comfortaa';
 $fontUbuntu: 'Ubuntu', sans-serif;
+$wsp :green;
+$ig : rgb(160, 81, 94);
+$fb : blue ;
