--- a/scss/layout/_niñas.scss
+++ b/scss/layout/_niñas.scss
@@ -16,3 +16,13 @@
     background-color: white ;
  }
 }
+.img_niñex {border: 1px solid #ddd;
+   border-radius: 4px;
+   padding: 5px;
+   width: 350px;
+   
+ }
+ 
+ .img_niñex:hover {
+   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+ }
